model evaluation and mlflow added

--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -167,21 +167,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-02 23:56:40,250: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-05-02 23:56:40,256: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-05-02 23:56:40,265: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-05-02 23:56:40,266: INFO: common: created directory at: artifacts]\n",
-      "[2024-05-02 23:56:40,267: INFO: common: created directory at: artifacts/data_transformation]\n",
-      "[2024-05-02 23:56:40,326: INFO: 741865018: Splited data into training and test sets]\n",
-      "[2024-05-02 23:56:40,327: INFO: 741865018: (1199, 12)]\n",
-      "[2024-05-02 23:56:40,327: INFO: 741865018: (400, 12)]\n",
+      "[2024-05-03 11:36:04,526: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-05-03 11:36:04,526: INFO: common: yaml file: params.yaml loaded successfully]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-05-03 11:36:04,543: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-05-03 11:36:04,544: INFO: common: created directory at: artifacts]\n",
+      "[2024-05-03 11:36:04,545: INFO: common: created directory at: artifacts/data_transformation]\n",
+      "[2024-05-03 11:36:04,582: INFO: 741865018: Splited data into training and test sets]\n",
+      "[2024-05-03 11:36:04,583: INFO: 741865018: (1199, 12)]\n",
+      "[2024-05-03 11:36:04,583: INFO: 741865018: (400, 12)]\n",
       "(1199, 12)\n",
       "(400, 12)\n"
      ]
